# mediary-api

./: .copier-answers.yml  .dockerignore  .env_example  .gitignore  .pre-commit-config.yaml  IDEAS.md  README.md  compose.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  todo.txt
dockerfiles/: Dockerfile  Dockerfile.fastapi
dockerfiles/api/: Dockerfile  Dockerfile.alpine  Dockerfile.alpine.uv  Dockerfile.alpine_uv  Dockerfile.slim.uv  Dockerfile.slim_pdm  Dockerfile.slim_uv
docs/: docker_cli.md  docker_images.md  migration_environment.md
mediary/app/: enums.py  main.py
mediary/app/api/: routers.py
mediary/app/api/routers/: core.py  setup.py
mediary/app/api/v1/: core.py  users.py
mediary/app/db/models/: user.py
mediary/app/models/: user.py
mediary/config/: base.py
mediary/scripts/: entrypoint.sh  run_fastapi.sh
tests/integration/: test_integration_example.py
tests/unit/: test_unit_example.py
