[project]
name = "mediary"
version = "0.1.0"
description = "Medical diary API."
authors = [{ name = "PaszaVonPomiot", email = "undefined@example.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "GPL-3.0-only" }
dependencies = ["uvicorn>=0.30.1", "fastapi>=0.111.0", "sqlmodel>=0.0.20"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.mypy]
# plugins = "pydantic.mypy"
python_version = "3.12"
exclude = ["tests/", "temp/"]

[tool.ruff]
line-length = 89
target-version = "py312"
exclude = [".git", ".venv/*"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",      # pydocstyle
    "DJ",     # flake8-django
    "ANN101", # Missing type annotation for `self` `cls` in method
    "N805",   # First argument of a method should be named `self`
    "EM101",  # Exception must not use a string literal, assign to variable first
    "TRY003", # Avoid specifying long messages outside the exception class
    "ANN102", # Missing type annotation for `cls` in classmethod
    "EM102",  # Exception must not use an f-string literal, assign to variable first
    "A003",   # Class attribute `type` is shadowing a python builtin
    "FBT001", # Boolean positional arg in function definition
    "B008",   # Do not perform function call `Depends` in argument defaults
    "ARG001", # Unused function argument
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "UP015",  # Unnecessary open() mode parameters
]
fixable = ["ALL"]
unfixable = []


[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # imported but unused
]
"tests/*" = [
    "S101",    # Use of `assert` detected
    "S105",    # Possible hardcoded password
    "E501",    # Line too long
    "PLR2004", # Magic value used in comparison, consider replacing 4 with a constant variable
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "PLR0913", # Too many arguments to function call (8 > 5)
    "ANN201",  # Missing return type annotation for public function
]
"*/docs/*" = [
    "E501", # Line too long
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "temp"]

[tool.pdm.dev-dependencies]
test = ["pytest>=8.2.2"]
lint = ["mypy>=1.10.1", "ruff>=0.5.1", "bandit[toml]>=1.7.9"]
git = ["pre-commit>=3.7.1"]
version = []
